Fix small px jumping

--- a/themes/finna2/less/finna/facets.less
+++ b/themes/finna2/less/finna/facets.less
@@ -21,6 +21,7 @@ div.facet > a {
 ul.jstree-children {
   width: 100%;
   padding: 0;
+  margin: 0;
 }
 
 .facet-group .active {
@@ -209,6 +210,10 @@ h4 + .list-group.facet {
 span.badge.cb-facet {
     float: right;
     margin-right: 10px;
+}
+
+.jstree-facet .jstree-node .facet {
+  padding: 3px 0;
 }
 
 .facet-group {
